通过接口（port）通信 解耦 domain model